--- a/css/components/InteractiveInfographic.styl
+++ b/css/components/InteractiveInfographic.styl
@@ -24,9 +24,23 @@
 
 .datamap-infographic-datamap
   position: relative
-  left: 9%
+  left: 6%
 
-.interactive-infographic-header-title
+.datamap-infographic-header-title
+  font-size: 21px
+  position: relative
+  left: 22%
+
+.datamap-infographic-grid
+  padding-left: 40px
+
+.datamap-infographic-empty-data
+  text-align: center
+  padding-left: 325px
+  font-size: 20px
+  font-weight: bold
+
+.heatmap-infographic-header-title
   font-size: 21px
   position: relative
   left: 7%
