--- a/css/components/InteractiveInfographic.styl
+++ b/css/components/InteractiveInfographic.styl
@@ -6,33 +6,36 @@
   padding-bottom: 20px
 
 .datamap-infographic-header
-  width: 500px
-  margin-top: 50px
-  margin-left: 50px
-  margin-right: 50px
-  margin-bottom: 10px
-  left: 18%
-  position: relative
+  font-size: 24px
+  font-style: normal
 
 .datamap-infographic-header-params
-  text-align: center
   white-space: nowrap
+  font-size: 22px
+
+.datamap-hr 
+  display: block
+  margin-top: 0.5em
+  margin-bottom: 0.5em
+  margin-left: auto
+  margin-right: auto
+  border-style: inset
+  border-width: 1px
 
 .datamap-infographic-header-text-bold
   font-weight: bold
+  font-style: normal
   white-space: nowrap
 
-.datamap-infographic-datamap
+.datamap-infographic
   position: relative
   left: 6%
+  padding-bottom: 10px
 
 .datamap-infographic-header-title
   font-size: 21px
   position: relative
   left: 22%
-
-.datamap-infographic-grid
-  padding-left: 40px
 
 .datamap-infographic-empty-data
   text-align: center
