--- a/css/components/InteractiveInfographic.styl
+++ b/css/components/InteractiveInfographic.styl
@@ -6,10 +6,17 @@
   padding-bottom: 20px
 
 .datamap-infographic-header
+  font-family: Merriweather,Georgia,serif
   font-size: 24px
   font-style: normal
 
+.heatmap-infographic-header
+  font-family: Merriweather,Georgia,serif
+  font-size: 22px
+  font-style: normal
+
 .datamap-infographic-header-params
+  font-family: Merriweather,Georgia,serif
   white-space: nowrap
   font-size: 22px
 
@@ -56,6 +63,9 @@
 .interactive-infographic-center
   text-align: center
 
+.interactive-infographic-underline
+  text-decoration: underline
+
 .interactive-infographic-left
   float: left
 
@@ -68,3 +78,35 @@
   border-style: double
   border-width: 2px
   padding: 8px 10px 10px 10px
+
+.infographic-legend-table
+  border-spacing: .5em
+
+.infographic-legend-title
+  font-family: Merriweather,Georgia,serif
+  font-weight: bold
+  text-decoration: underline
+
+.infographic-legend-tr
+  height: 25px
+  padding-right: 15px
+  width: 25px
+  display: inline-block
+
+.infographic-chart-legend
+  height: 200px
+  width: 250px
+  overflow-y: scroll
+
+.piechart-timeseries
+  padding-left:50px
+  height: 200px
+  width: 250px
+  overflow-y: scroll
+  float: right
+
+.infographic-slider
+  padding-left: 25px
+  padding-top: 25px
+
+
