--- a/css/components/InteractiveInfographic.styl
+++ b/css/components/InteractiveInfographic.styl
@@ -55,6 +55,9 @@
   position: relative
   left: 7%
 
+.heatmap-infographic
+  padding-left: 100px
+
 .heatmap-header
   width: 600px
   margin: 50px
@@ -62,9 +65,12 @@
 
 .interactive-infographic-center
   text-align: center
+  font-family: Merriweather,Georgia,serif
+  font-size:22px
 
 .interactive-infographic-underline
   text-decoration: underline
+  font-weight: bold
 
 .interactive-infographic-left
   float: left
