--- a/src/css/components/InteractiveInfographic.styl
+++ b/src/css/components/InteractiveInfographic.styl
@@ -7,7 +7,7 @@
 
 .datamap-infographic-header
   font-family: Merriweather,Georgia,serif
-  font-size: 24px
+  font-size: 21px
   font-style: normal
 
 .heatmap-infographic-header
@@ -19,6 +19,13 @@
   font-family: Merriweather,Georgia,serif
   white-space: nowrap
   font-size: 22px
+  padding-top:20px
+
+.pie-infographic-header-params
+  font-family: Merriweather,Georgia,serif
+  white-space: nowrap
+  font-size: 16px
+  padding-left: 320px
 
 .datamap-hr 
   display: block
@@ -36,7 +43,7 @@
 
 .datamap-infographic
   position: relative
-  left: 6%
+  left: 3%
   padding-bottom: 10px
 
 .datamap-infographic-header-title
@@ -56,7 +63,7 @@
   left: 7%
 
 .heatmap-infographic
-  padding-left: 100px
+  padding-left: 50px
 
 .heatmap-header
   width: 600px
@@ -64,12 +71,10 @@
   padding-left: 200px
 
 .interactive-infographic-center
-  text-align: center
   font-family: Merriweather,Georgia,serif
-  font-size:22px
+  font-size: 17px
 
-.interactive-infographic-underline
-  text-decoration: underline
+.interactive-infographic-subtitle
   font-weight: bold
 
 .interactive-infographic-left
@@ -81,18 +86,23 @@
 
 .heatmap-infographic-zoom-button
   float: right
+  font-family: Merriweather,Georgia,serif
   border-style: double
   border-width: 2px
+  font-size: 15px
   padding: 8px 10px 10px 10px
   background-color: lightgrey
 
 .infographic-legend-table
   border-spacing: .5em
+  font-family: Merriweather, Georgia, serif
+  font-size:15px
 
 .infographic-legend-title
   font-family: Merriweather,Georgia,serif
   font-weight: bold
   text-decoration: underline
+  margin-bottom: 7px
 
 .infographic-legend-tr
   height: 25px
@@ -105,15 +115,38 @@
   width: 250px
   overflow-y: scroll
 
-.piechart-timeseries
-  padding-left:50px
-  height: 200px
-  width: 250px
-  overflow-y: scroll
+.piechart-legend
   float: right
+  font-family: Merriweather,Georgia,serif
+  font-size: 14px
+
+.piechart-container
+  height:230px
+
+.piechart-centered-title
+  font-family: Merriweather,Georgia,serif
+  font-size: 14px
+
+.piechart-label
+  font-family: Merriweather,Georgia,serif
+  font-size: 14px
 
 .infographic-slider
+  font-family: Merriweather,Georgia,serif
   padding-left: 25px
-  padding-top: 25px
+  padding-top: 29px
 
+.grid-infographic-ylabel
+  padding-top: 1px
+  padding-left: 14px
+  transform-origin: left top 0
+  font-size: 13px
+  font-weight: bold
+  font-family: Merriweather,Georgia,serif
 
+.grid-infographic-xlabel
+  float: right
+  padding-right: 287px
+  font-size: 13px
+  font-weight: bold
+  font-family: Merriweather,Georgia,serif
