old infographics added to redesign

--- a/src/css/_helpers.styl
+++ b/src/css/_helpers.styl
@@ -231,7 +231,6 @@ for $key, $value in $uswds-colors
 .select-wrap
   position: relative
   &:after
-    absolute: top 12px right 10px
     background: url('/img/arrow-down.png') no-repeat
     background-size: auto 15px
     content: ''
@@ -240,8 +239,8 @@ for $key, $value in $uswds-colors
     height: 15px
     pointer-events: none
     position: absolute
-    // right: 10px
-    // top: 12px
+    right: 10px
+    top: 12px
     width: 15px
     z-index: 2
 
