--- a/src/css/components/InteractiveInfographic.styl
+++ b/src/css/components/InteractiveInfographic.styl
@@ -1,6 +1,6 @@
 .long-text-formatter
   word-break: breakall
-  white-space: normal
+  white-space: normal !important
   overflow: auto
   padding-top: 20px
   padding-bottom: 20px
