Data Explorer css tweaks.

--- a/src/css/components/DatasetExplorer.styl
+++ b/src/css/components/DatasetExplorer.styl
@@ -1,4 +1,31 @@
+.dataset-explorer
+  display: flex
+  flex-wrap: wrap
+
+.dataset-explorer-menubar
+  display: flex
+  align-items: center
+  padding: 20px 0px 20px 40px
+  width: 100%
+  background-color: white
+  border-bottom-width: 1px
+  border-bottom-style: solid
+  border-bottom-color: #BFD4DF
+
+  > em
+    font-size: 18px
+    font-weight: bold
+    padding-right: 5px
+
+  > div
+    height: 36px
+    width: 300px
+    margin-right: 100px
+
+    > div > *:last-child
+      padding-top: 2px
+
 .dataset-explorer-content
   width: 75%
-  padding-left: 50px
+  padding: 30px 0px 30px 30px
   background-color: #F2F5F7
