--- a/src/css/components/DayPicker.styl
+++ b/src/css/components/DayPicker.styl
@@ -4,12 +4,13 @@
 
 .day-picker-container
   margin-bottom: 10px
+  padding-right: 30px
 
   input
     font-size: 10px
     padding-left: 10px
-    height: 30px
-    width: 250px
+    height: 36px
+    width: 100%
     border-radius: 3px
     border-style: solid
     border-width: 1px
