--- a/src/css/components/Filter.styl
+++ b/src/css/components/Filter.styl
@@ -1,7 +1,6 @@
 .filter-sidebar
-  padding: 20px 0px 20px 40px
-  height: 100%
-  width: 300px
+  padding: 30px 0px 20px 40px
+  width: 23%
   float: left
   border-right: 1px
   border-right-style: solid
@@ -13,25 +12,35 @@
     color: #00517D
 
 .filter-input
-  font-size: 10px
-  height: 30px
-  width: 250px
-  border-radius: 3px
-  border-style: solid
-  border-width: 1px
-  border-color: #BFD4DF
+  padding-right: 30px
 
+  > input
+    font-size: 10px
+    height: 36px
+    width: 100%
+    border-radius: 3px
+    border-style: solid
+    border-width: 1px
+    border-color: #BFD4DF
+    padding-left: 10px
 
 .filter-item-container
   margin-bottom: 10px
+
   h3
     margin-bottom: 10px
 
-.filter-select > div
-  font-size: 10px
-  height: 30px
-  width: 250px
-  border-radius: 3px
-  border-style: solid
-  border-width: 1px
-  border-color: #BFD4DF
+.filter-select
+  padding-right: 30px
+
+  > div
+    font-size: 10px
+    height: 36px
+    width: 100%
+    border-radius: 3px
+    border-style: solid
+    border-width: 1px
+    border-color: #BFD4DF
+
+    > *:last-child
+      padding-top: 5px
