Filter hide function added.

--- a/src/css/components/DatasetExplorer.styl
+++ b/src/css/components/DatasetExplorer.styl
@@ -16,16 +16,39 @@
     font-size: 18px
     font-weight: bold
     padding-right: 5px
+    margin-left: 80px
 
-  > div
+  > .Select
     height: 36px
     width: 300px
-    margin-right: 100px
 
     > div > *:last-child
       padding-top: 2px
 
+  .filter-toggle-button
+    background: #F2F5F7
+    color: #5990AC
+    padding: 15px 8px
+    border-radius: 3px
+    border-width: 1px
+    border-style: solid
+    border-color: #BFD4DF
+    cursor: pointer
+
+    i:first-child
+      margin-right: 5px
+      -webkit-transition: .5s
+      -moz-transition: .5s
+      -ms-transition: .5s
+      -o-transition: .5s
+      transition: .5s
+
 .dataset-explorer-content
+  padding: 30px 0 30px 30px
   width: 75%
-  padding: 30px 0px 30px 30px
   background-color: #F2F5F7
+  -webkit-transition: .3s
+  -moz-transition: .3s
+  -ms-transition: .3s
+  -o-transition: .3s
+  transition: .3s
