--- a/src/css/components/DatasetExplorer.styl
+++ b/src/css/components/DatasetExplorer.styl
@@ -52,3 +52,102 @@
   -ms-transition: .3s
   -o-transition: .3s
   transition: .3s
+  padding: 30px 0px 30px 30px
+  background-color: #F2F5F7
+
+// The main container element
+.Collapsible {
+  background-color: white
+  margin-top:20px
+  width: 65%
+}
+
+
+//The content within the collaspable area
+.Collapsible__contentInner {
+  padding: 10px;
+  border: 1px solid white;
+  border-color: #00517d
+  border-bottom-right-radius:5px
+  border-bottom-left-radius:5px
+  border-top:0px
+  padding: 10px;
+  background-color: white
+  color: #00517d;
+  height: 420px;
+
+  p {
+    margin-bottom: 10px;
+    font-size: 14px;
+    line-height: 20px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+}
+
+//The link which when clicked opens the collapsable area
+.Collapsible__trigger {
+  display: block;
+  font-weight: 400;
+  text-decoration: none;
+  position: relative;
+  border: 1px solid white;
+  border-color: #00517d
+  border-top-right-radius:5px
+  border-top-left-radius:5px
+  padding: 10px;
+  background-color: white
+  color: #00517d;
+
+  &:after {
+    font-family: 'FontAwesome';
+    content: '\f107';
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    display: block;
+    transition: transform 300ms;
+  }
+
+  &.is-open {
+    &:after {
+      transform: rotateZ(180deg);
+    }
+  }
+
+  &.is-disabled {
+    opacity: 0.5;
+    background-color: grey;
+  }
+}
+
+.CustomTriggerCSS {
+  background-color: lightcoral;
+  transition: background-color 200ms ease;
+  
+  
+}
+
+.CustomTriggerCSS--open {
+  background-color: darkslateblue;
+}
+
+.Collapsible__custom-sibling {
+  padding: 5px;
+  font-size: 12px;
+  background-color: #CBB700;
+  color: black;
+}
+
+.collapsible-container
+  width: 425px
+  height: 340px
+
+.infographic-title-div
+  height: 25
+
+.infographic-barchart-title
+  padding-left: 590px
+
