--- a/src/css/components/DatasetExplorer.styl
+++ b/src/css/components/DatasetExplorer.styl
@@ -58,7 +58,7 @@
 // The main container element
 .Collapsible {
   background-color: white
-  margin-top:20px
+  margin-bottom:20px
   width: 75%
 }
 
