Fixed autocomplete dropdowns and styling changes throughout.

--- a/src/css/components/DatasetExplorer.styl
+++ b/src/css/components/DatasetExplorer.styl
@@ -151,3 +151,28 @@
 .infographic-barchart-title
   padding-left: 590px
 
+.content-selected-filters
+  height: 100%
+
+  > div
+    padding-top: 10px
+
+    > a
+      padding-left: 10px
+      text-decoration: underline
+      font-weight: bold
+
+    .content-selected-filter
+      padding: 5px
+      border-radius: 35px
+      border: 2px solid black
+      box-shadow: 0 0 3px gray
+      background-color: white
+      margin-left: 7px
+      margin-top: 10px
+
+      span
+        padding-right: 10px
+
+      i
+        color: #ef4205
