--- a/src/css/components/Filter.styl
+++ b/src/css/components/Filter.styl
@@ -45,9 +45,9 @@
     margin-bottom: 10px
 
 .filter-select
-  padding-right: 30px
+  margin-right: 30px
 
-  > div
+  .Select-control
     font-size: 10px
     height: 36px
     width: 100%
@@ -58,3 +58,25 @@
 
     > *:last-child
       padding-top: 5px
+
+  .Select-menu-outer
+    font-size: 10px
+    width: 100%
+    border-radius: 3px
+    border-style: solid
+    border-width: 1px
+    border-color: #BFD4DF
+
+.selected-filter
+  display: flex
+  padding-top: 10px
+
+  button
+    padding: 0
+
+    span
+      font-size: 16px
+      padding-right: 10px
+
+    i
+      color: #ef4205
