FDA-280 added help modal to pet food reactions.

--- a/src/css/components/Filter.styl
+++ b/src/css/components/Filter.styl
@@ -80,3 +80,39 @@
 
     i
       color: #ef4205
+
+.help-window
+  position: absolute
+  display: flex
+  flex-direction: column
+  height: 80%
+  width: 60%
+  min-width: 320px
+  top: 0
+  left: 0
+  right: 0
+  bottom: 0
+  margin: auto
+  background: rgba(255, 255, 255, 1)
+  box-shadow: 0 5px 15px rgba(0,0,0,.5)
+  border: 1px solid rgba(0,0,0,.2)
+  border-radius: 6px
+  overflow: auto
+  outline: none
+
+.help-window > h3
+  padding: 15px
+  border-bottom: 1px solid #e5e5e5
+  text-align: center
+
+.help-window > p
+  padding: 15px 15px 0
+
+.help-window > ul
+  padding: 15px
+
+.ReactTable .-pagination input, .ReactTable .-pagination select
+  padding: 5px 9px
+
+.select-wrap:after
+  right: 3px
