FDA-280 minor css change.

--- a/src/css/components/Filter.styl
+++ b/src/css/components/Filter.styl
@@ -100,22 +100,22 @@
   overflow: auto
   outline: none
 
-.help-window > h3
-  padding: 15px
-  border-bottom: 1px solid #e5e5e5
-  text-align: center
+  > h3
+    padding: 15px
+    border-bottom: 1px solid #e5e5e5
+    text-align: center
 
-.help-window > p
-  padding: 15px 15px 0
+  > p
+    padding: 15px 15px 0
 
-.help-window > ul
-  padding: 15px
+  > ul
+    padding: 15px
 
-.ReactTable .-pagination input, .ReactTable .-pagination select
-  padding: 5px 9px
+  .ReactTable .-pagination input, .ReactTable .-pagination select
+    padding: 5px 9px
+
+  .ReactTable .rt-th, .ReactTable .rt-td
+    text-align: center
 
 .select-wrap:after
   right: 3px
-
-.ReactTable .rt-th, .ReactTable .rt-td
-  text-align: center
