FDA-290 Added dataset/view help window.

--- a/src/css/components/DatasetExplorer.styl
+++ b/src/css/components/DatasetExplorer.styl
@@ -11,6 +11,7 @@
   border-bottom-width: 1px
   border-bottom-style: solid
   border-bottom-color: #BFD4DF
+  color: #00517d
 
   > em
     font-size: 18px
@@ -42,6 +43,9 @@
       -ms-transition: .5s
       -o-transition: .5s
       transition: .5s
+
+  i
+    cursor: pointer
 
 .dataset-explorer-content
   padding: 30px 0 30px 30px
