--- a/src/css/components/DatasetExplorer.styl
+++ b/src/css/components/DatasetExplorer.styl
@@ -5,7 +5,8 @@
 .dataset-explorer-menubar
   display: flex
   align-items: center
-  padding: 20px 0px 20px 40px
+  justify-content: space-between
+  padding: 20px 40px 20px 40px
   width: 100%
   background-color: white
   border-bottom-width: 1px
@@ -17,7 +18,7 @@
     font-size: 18px
     font-weight: bold
     padding-right: 5px
-    margin-left: 80px
+    margin-left: 40px
 
   > .Select
     height: 36px
