FDA-295 Minor css change.

--- a/src/css/components/DataViewToggle.styl
+++ b/src/css/components/DataViewToggle.styl
@@ -6,6 +6,7 @@
   border-style: solid
   border-width: 2px
   border-color: #BFD4DF
+  cursor: pointer
 
   > div:first-child
     border-right: 2px solid #BFD4DF
