FDA-296 update data changes pt 2

--- a/src/css/components/Filter.styl
+++ b/src/css/components/Filter.styl
@@ -122,3 +122,28 @@
 
 .select-wrap:after
   right: 3px
+
+.sidebar-buttons
+  display: flex
+  flex-direction: row
+  align-items: center
+  justify-content: space-between
+  border-top: #DDE7EC solid 1px
+  padding: 5px 30px 5px 0
+
+  button
+    color: white
+    font-weight: bold
+    padding: 5px 40px
+
+  span
+    color: #4286BE
+    font-size: 14px
+    font-weight: bold
+    text-decoration: underline
+
+.bg-light-blue
+  background-color: #ACCAE2
+
+.bg-darker-blue
+  background-color: #2D7AB7
