FDA-296 partial update data changes. Not working great.

--- a/src/css/components/DatasetExplorerContent.styl
+++ b/src/css/components/DatasetExplorerContent.styl
@@ -9,4 +9,10 @@
     display: flex
 
 .dataset-overlay
-  background: rgba(0,0,0,0.5)
+  background: rgba(0,0,0,0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: calc(100% + 30px);
+  height: 100%;
+  z-index: 2;
