--- a/src/css/components/Filter.styl
+++ b/src/css/components/Filter.styl
@@ -1,6 +1,6 @@
 .filter-sidebar
   width: 23%
-  padding: 30px 0px 20px 40px
+  padding-top: 30px
   overflow-x: hidden
   float: left
   border-right: 1px
@@ -39,9 +39,12 @@
     padding-left: 10px
 
 .filter-item-container
-  margin-bottom: 10px
+  padding-left: 40px
+  margin-bottom: 25px
 
   h3
+    font-size: 16px
+    font-weight: normal
     margin-bottom: 10px
 
   i
@@ -124,17 +127,23 @@
   right: 3px
 
 .sidebar-buttons
+  position: fixed
+  bottom: 0
   display: flex
   flex-direction: row
   align-items: center
   justify-content: space-between
+  border-right: #bfd4df solid 1px
   border-top: #DDE7EC solid 1px
-  padding: 5px 30px 5px 0
+  padding: 8px 30px 8px 0
+  width: 23%
+  background-color: white
 
   button
     color: white
     font-weight: bold
-    padding: 5px 40px
+    margin-left: 40px
+    padding: 8px 40px
 
   span
     color: #4286BE
