--- a/src/css/components/DatasetExplorerContent.styl
+++ b/src/css/components/DatasetExplorerContent.styl
@@ -1,3 +1,14 @@
+.dataset-explorer-content
+  position: relative
+  padding: 30px 0 30px 30px
+  width: 75%
+  background-color: #F2F5F7
+  -webkit-transition: .3s
+  -moz-transition: .3s
+  -ms-transition: .3s
+  -o-transition: .3s
+  transition: .3s
+
 .dataset-table-menubar
   height: 40px
   display: flex
@@ -9,10 +20,10 @@
     display: flex
 
 .dataset-overlay
-  background: rgba(0,0,0,0.5);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: calc(100% + 30px);
-  height: 100%;
-  z-index: 2;
+  background: rgba(0,0,0,0.5)
+  position: absolute
+  top: 0
+  left: 0
+  width: calc(100% + 30px)
+  height: 100%
+  z-index: 2
