--- a/src/css/components/DatasetExplorerContent.styl
+++ b/src/css/components/DatasetExplorerContent.styl
@@ -9,6 +9,38 @@
   -o-transition: .3s
   transition: .3s
 
+  .blur
+    filter: blur(1.5px)
+
+  .ReactTable .-pagination input, .ReactTable .-pagination select
+    padding: 5px 17px
+
+  .ReactTable .rt-thead.-header
+    padding-top: 8px
+
+  .ReactTable .rt-thead .rt-tr
+    text-align: left
+    padding: 0
+
+  .ReactTable .rt-table
+    background-color: white
+
+  .ReactTable .rt-thead.-filters
+    box-shadow: 0 7px 15px 0 rgba(0,0,0,0.08)
+
+  .ReactTable .rt-thead.-header
+    box-shadow: none
+
+  .ReactTable .rt-thead .rt-th, .ReactTable .rt-thead .rt-td
+    padding: 5px 10px
+
+  .ReactTable .rt-th, .ReactTable .rt-td
+    padding: 12px 10px
+    line-height: 1.2
+
+  .ReactTable .rt-expander:after
+    border-top: 7px solid #017bba
+
 .dataset-table-menubar
   height: 40px
   display: flex
