--- a/src/css/components/Filter.styl
+++ b/src/css/components/Filter.styl
@@ -54,7 +54,7 @@
   margin-right: 30px
 
   .Select-control
-    font-size: 10px
+    font-size: 15px
     height: 36px
     width: 100%
     border-radius: 3px
@@ -86,6 +86,8 @@
 
     i
       color: #ef4205
+      font-size: 16px
+
 
 .help-window
   position: absolute
@@ -134,7 +136,7 @@
   align-items: center
   justify-content: space-between
   border-right: #bfd4df solid 1px
-  border-top: #DDE7EC solid 1px
+  border-top: #bfd4df solid 1px
   padding: 8px 30px 8px 0
   width: 23%
   background-color: white
@@ -147,12 +149,13 @@
 
   span
     color: #4286BE
+    cursor: pointer
     font-size: 14px
     font-weight: bold
     text-decoration: underline
 
-.bg-light-blue
+.filter-bg-light-blue
   background-color: #ACCAE2
 
-.bg-darker-blue
-  background-color: #2D7AB7
+.filter-bg-darker-blue
+  background-color: #017bba
