--- a/src/css/components/Filter.styl
+++ b/src/css/components/Filter.styl
@@ -14,6 +14,9 @@
   -o-transition: .3s
   transition: .3s
 
+  .filter-components
+      padding-bottom: 52px
+
   p
     color: #00517D
 
@@ -138,6 +141,7 @@
   border-right: #bfd4df solid 1px
   border-top: #bfd4df solid 1px
   padding: 8px 30px 8px 0
+  height: 52px
   width: 23%
   background-color: white
 
