FDA-299 CSS tweaks

--- a/src/css/components/DatasetExplorerContent.styl
+++ b/src/css/components/DatasetExplorerContent.styl
@@ -45,7 +45,7 @@
   display: flex
   align-items: center
   justify-content: space-between
-  padding-bottom: 35px
+  padding-bottom: 25px
 
   > div:first-child
     display: flex
@@ -69,3 +69,30 @@
   width: calc(100% + 30px)
   height: 100%
   z-index: 2
+
+.content-selected-filters
+  height: 100%
+  padding-bottom: 25px
+
+  > div
+    padding-top: 10px
+
+    > a
+      padding-left: 10px
+      text-decoration: underline
+      font-weight: bold
+
+    .content-selected-filter
+      padding: 5px 10px
+      border-radius: 35px
+      box-shadow: 0 0 0 1px #bfd4df;
+      background-color: #fff;
+      margin-right: 7px;
+      margin-top: 10px;
+
+      span
+        padding-right: 10px
+
+      i
+        color: #ef4205
+        font-size: 16px
