--- a/src/css/components/DatasetExplorerContent.styl
+++ b/src/css/components/DatasetExplorerContent.styl
@@ -1,13 +1,40 @@
+.dataset-explorer-infographic-menubar
+  display: flex
+  align-items: center
+  justify-content: space-between
+  padding: 20px 40px 20px 40px
+  width: 100%
+  background-color: white
+  border-bottom-width: 1px
+  border-bottom-style: solid
+  border-bottom-color: #BFD4DF
+
+  > em
+    font-weight: bold
+    padding-right: 5px
+    margin-left: 40px
+
+  > .Select
+    height: 36px
+    width: 300px
+
+    > div > *:last-child
+      padding-top: 2px
+
 .dataset-explorer-content
   position: relative
-  padding: 30px 0 30px 30px
-  width: 75%
+  height: 100%
+  width: 77%
   background-color: #F2F5F7
   -webkit-transition: .3s
   -moz-transition: .3s
   -ms-transition: .3s
   -o-transition: .3s
   transition: .3s
+
+.dataset-explorer-results
+  height: 100%
+  padding: 30px 0 30px 30px
 
   .blur
     filter: blur(1.5px)
