--- a/src/css/components/DatasetExplorerContent.styl
+++ b/src/css/components/DatasetExplorerContent.styl
@@ -21,6 +21,25 @@
     > div > *:last-child
       padding-top: 2px
 
+.dataset-explorer-infographic-select-bar
+  display: flex
+  align-items: center
+  justify-content: space-between
+  width: 87%
+  padding-bottom: 10px
+
+  > em
+    font-weight: bold
+    padding-right: 5px
+    margin-left: 40px
+
+  > .Select
+    height: 36px
+    width: 300px
+
+    > div > *:last-child
+      padding-top: 2px
+
 .dataset-explorer-content
   position: relative
   height: 100%
@@ -67,6 +86,11 @@
 
   .ReactTable .rt-expander:after
     border-top: 7px solid #017bba
+
+  .custom-tooltip
+    background-color: white
+    padding: 15px
+
 
 .dataset-table-menubar
   display: flex
