FDA-302 Line chart styling.

--- a/src/css/components/DatasetExplorerContent.styl
+++ b/src/css/components/DatasetExplorerContent.styl
@@ -40,6 +40,9 @@
     > div > *:last-child
       padding-top: 2px
 
+  .Select-placeholder, .Select--single > .Select-control .Select-value
+    color: #333
+
 .dataset-explorer-content
   position: relative
   height: 100%
