FDA-302 Removed particularly for PhishPharm. Styled menu.

--- a/src/css/components/DataViewToggle.styl
+++ b/src/css/components/DataViewToggle.styl
@@ -1,7 +1,9 @@
 .data-view-toggle
+  position: absolute
+  right: 0
   display: flex
   flex-direction: row
-  margin-left: 40px
+  margin: 0 40px 0
   cursor: pointer
 
   > div
