--- a/src/css/components/DatasetExplorer.styl
+++ b/src/css/components/DatasetExplorer.styl
@@ -5,7 +5,6 @@
 .dataset-explorer-menubar
   display: flex
   align-items: center
-  justify-content: space-between
   padding: 20px 40px 20px 40px
   width: 100%
   background-color: white
@@ -47,6 +46,7 @@
     color: #94b2ce
     cursor: pointer
     transition: .2s linear
+    margin-left: 20px
 
     &:hover
       color: #017bba
