FDA-302 fix css for react-table column headers

--- a/src/css/components/DatasetExplorerContent.styl
+++ b/src/css/components/DatasetExplorerContent.styl
@@ -71,6 +71,12 @@
     text-align: left
     padding: 0
 
+  .ReactTable .rt-thead .rt-resizable-header-content
+    font-weight: bold
+    font-family: Merriweather, Georgia, serif
+    color: #00517d
+    font-size: 70%
+
   .ReactTable .rt-table
     background-color: white
 
