--- a/src/css/components/DatasetExplorer.styl
+++ b/src/css/components/DatasetExplorer.styl
@@ -1,6 +1,15 @@
+
 .dataset-explorer
   display: flex
   flex-wrap: wrap
+
+.dataset-explorer-help-link
+  position: absolute
+  right: 0
+  display: flex
+  flex-direction: row
+  margin: 0 20px 0
+  cursor: pointer
 
 .dataset-explorer-menubar
   display: flex
