FDA-317 - make table scrollbars sticky, FDA-318 - explain export options better

--- a/src/css/components/DatasetExplorer.styl
+++ b/src/css/components/DatasetExplorer.styl
@@ -1,4 +1,21 @@
 
+.ReactTable {
+  .rt-table {
+    overflow: hidden !important;
+
+    .rt-tbody {
+      min-width: 0px !important;
+    }
+    .rt-thead {
+      min-width: 0px !important;
+      overflow: hidden !important;
+    }
+  }
+}
+.vertical-scrollbar-present {
+  width: calc(100% - 15px) !important;
+}
+
 .dataset-explorer
   display: flex
   flex-wrap: wrap
