--- a/src/css/components/DatasetExplorerContent.styl
+++ b/src/css/components/DatasetExplorerContent.styl
@@ -31,9 +31,9 @@
   > em
     font-weight: bold
     padding-right: 5px
-    margin-left: 40px
 
   > .Select
+    margin-right: 30px
     height: 36px
     width: 300px
 
@@ -42,6 +42,15 @@
 
   .Select-placeholder, .Select--single > .Select-control .Select-value
     color: #333
+
+  .show-top-results
+    margin-left: 10px
+
+    > div
+      white-space: nowrap
+
+      > input
+        margin-right: 8px
 
 .dataset-explorer-content
   position: relative
@@ -53,6 +62,18 @@
   -ms-transition: .3s
   -o-transition: .3s
   transition: .3s
+
+  .chart-background
+    width: 90%
+    margin-top: 18px
+    padding: 15px
+    background: #fff
+    border-width: 1px
+    border-style: solid
+    border-color: #bfd4df
+
+  .bar-chart-background
+    padding-left: 0px
 
 .dataset-explorer-results
   height: 100%
