FDA-327, FDA-312 Changes to Filters Panel and Default Columns

--- a/src/css/components/Filter.styl
+++ b/src/css/components/Filter.styl
@@ -163,3 +163,8 @@
 
 .filter-bg-darker-blue
   background-color: #017bba
+
+.filter-header
+  font-weight: bold !important
+  color: #00517d
+  font-family: Merriweather, Georgia, serif
