FDA-303 Reworkedlegend entirely.

--- a/src/css/components/DatasetExplorerContent.styl
+++ b/src/css/components/DatasetExplorerContent.styl
@@ -76,6 +76,25 @@
   .bar-chart-background
     padding-left: 0px
 
+  .line-legend
+    display: flex
+    flex-wrap: wrap
+
+    .legend-item
+      display: inline-flex
+      padding-bottom: 5px
+      padding-right: 20px
+
+      > span
+        height: 12px
+        width: 12px
+        display: inline-block
+
+      > text
+        font-family: Gill Sans
+        font-size: 14px
+        margin-left: 5px
+
 .dataset-explorer-results
   height: 100%
   padding: 15px 0 15px 30px
