FDA-244 - style changes for checkbox components

--- a/src/css/components/Filter.styl
+++ b/src/css/components/Filter.styl
@@ -168,3 +168,11 @@
   font-weight: bold !important
   color: #00517d
   font-family: Merriweather, Georgia, serif
+
+.checkbox
+  margin-bottom: 0
+  padding-left : 10px
+
+.column
+  float: left
+  width: 50%
