FDA-303 More chart improvements.

--- a/src/css/components/DatasetExplorerContent.styl
+++ b/src/css/components/DatasetExplorerContent.styl
@@ -52,10 +52,20 @@
       > input
         margin-right: 8px
 
+.width-100
+  width: 100%
+
+.width-77
+  width: 77%
+
+.flex-content
+  display: flex
+  flex-direction: column
+  align-items: center
+
 .dataset-explorer-content
   position: relative
   height: 100%
-  width: 77%
   background-color: #F2F5F7
   -webkit-transition: .3s
   -moz-transition: .3s
@@ -98,7 +108,7 @@
 
 .dataset-explorer-results
   height: 100%
-  padding: 15px 0 15px 30px
+  padding: 15px 30px 15px 30px
 
   .blur
     filter: blur(1.5px)
@@ -208,3 +218,8 @@
       i
         color: #ef4205
         font-size: 16px
+
+.infographic-title-div
+  display: flex
+  justify-content: space-between
+  padding-bottom: 10px
