--- a/src/css/components/Filter.styl
+++ b/src/css/components/Filter.styl
@@ -132,18 +132,19 @@
   right: 3px
 
 .sidebar-buttons
-  position: fixed
-  bottom: 0
+  position: absolute
+  top: 80%
+  left: 50%
   display: flex
   flex-direction: row
   align-items: center
   justify-content: space-between
-  border-right: #bfd4df solid 1px
-  border-top: #bfd4df solid 1px
+  border: #bfd4df solid 1px
   padding: 8px 30px 8px 0
   height: 52px
   width: 23%
   background-color: white
+  z-index: 999
 
   button
     color: white
