FDA-352 ie Style fixes

--- a/src/css/components/DataViewToggle.styl
+++ b/src/css/components/DataViewToggle.styl
@@ -29,3 +29,8 @@
   span
     padding-left: 7px
     font-weight: 600
+
+
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none)
+  .data-view-toggle
+    margin-top: -22px
