--- a/src/css/components/DatasetExplorerContent.styl
+++ b/src/css/components/DatasetExplorerContent.styl
@@ -232,3 +232,7 @@
   display: flex
   justify-content: space-between
   padding-bottom: 10px
+
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none)
+  .ReactTable .select-wrap::after
+    display: none
