FDA-352 ie Style fixes

--- a/src/css/components/DatasetExplorerContent.styl
+++ b/src/css/components/DatasetExplorerContent.styl
@@ -181,6 +181,12 @@
   > div:first-child
     display: flex
 
+  .search-input
+    width: 240px
+    height: 20px
+    padding: 17px
+    -webkit-appearance: none
+
   .collapse-rows
     color: #017bba
     font-weight: bold
@@ -236,3 +242,7 @@
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none)
   .ReactTable .select-wrap::after
     display: none
+
+  .dataset-table-menubar .search-input
+    padding: 0 17px
+    height: 35px
