FDA-350 Fixed Pie/Bar Chart.

--- a/src/css/components/DatasetExplorerContent.styl
+++ b/src/css/components/DatasetExplorerContent.styl
@@ -58,6 +58,10 @@
 .width-77
   width: 77%
 
+.pie-bar-chart-container
+  display: flex
+  justify-content: space-between
+
 .flex-content
   display: flex
   flex-direction: column
