FDA-307, FDA-354 Added help text to Phish-Pharm & Pet Foods.

--- a/src/css/components/DatasetExplorer.styl
+++ b/src/css/components/DatasetExplorer.styl
@@ -1,20 +1,19 @@
 
-.ReactTable {
-  .rt-table {
+.ReactTable
+  .rt-table
     overflow: hidden !important;
 
-    .rt-tbody {
+    .rt-tbody
       min-width: 0px !important;
-    }
-    .rt-thead {
+
+    .rt-thead
       min-width: 0px !important;
       overflow: hidden !important;
-    }
-  }
-}
-.vertical-scrollbar-present {
+
+
+.vertical-scrollbar-present
   width: calc(100% - 15px) !important;
-}
+
 
 .dataset-explorer
   display: flex
