Fixed a few bugs.

--- a/src/css/components/DatasetExplorer.styl
+++ b/src/css/components/DatasetExplorer.styl
@@ -36,6 +36,7 @@
   border-bottom-width: 1px
   border-bottom-style: solid
   border-bottom-color: #BFD4DF
+  z-index: 2
 
   > em
     font-weight: bold
