FDA-353 fixed line chart and favicon

--- a/src/css/components/DatasetExplorerContent.styl
+++ b/src/css/components/DatasetExplorerContent.styl
@@ -250,3 +250,7 @@
   .dataset-table-menubar .search-input
     padding: 0 17px
     height: 35px
+
+  .chart-background
+    height: 500px
+    width: 1000px
