Added Interactive Infographic Tour.

--- a/src/css/components/QueryExplorer.styl
+++ b/src/css/components/QueryExplorer.styl
@@ -6,3 +6,9 @@
     position: absolute
     top: 17px
     width: 20px
+
+.tourStart
+  top: 5px
+  right: 5px
+  position: absolute
+  cursor: pointer
