--- a/src/css/components/DataViewToggle.styl
+++ b/src/css/components/DataViewToggle.styl
@@ -33,4 +33,4 @@
 
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none)
   .data-view-toggle
-    margin-top: -22px
+    position: inherit
