--- a/src/css/components/DatasetExplorer.styl
+++ b/src/css/components/DatasetExplorer.styl
@@ -170,3 +170,8 @@
 
 .infographic-barchart-title
   padding-left: 590px
+
+
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none)
+  .dataset-explorer-help-link
+    position: inherit
