--- a/src/css/_table.styl
+++ b/src/css/_table.styl
@@ -43,7 +43,7 @@
 .table-striped
   tbody
     tr
-      &:nth-of-type(odd)
+      &:nth-of-type(odd) rt-td
         background-color rgba(0, 0, 0, 0.05)
 
 .table-hover
