--- a/src/css/_table.styl
+++ b/src/css/_table.styl
@@ -7,6 +7,7 @@
     th
       vertical-align bottom
       border-bottom 2px solid #eceeef
+      font-weight: bold
   tbody
     & + tbody
       border-top 2px solid #eceeef
