Add scrolling link to API Usage.

--- a/src/css/_base.styl
+++ b/src/css/_base.styl
@@ -81,6 +81,7 @@ html
   font-size: $pSize
   font-weight: 300
   overflow-x: hidden // 2
+  scroll-behavior:smooth
   text-rendering: optimizeSpeed // 3
   touch-action: manipulation // 4
   overflow-y:scroll
