Added usage statistics, started css

--- a/src/css/components/DataDictionary.styl
+++ b/src/css/components/DataDictionary.styl
@@ -1,7 +1,40 @@
-.color-box
-  width: 10px
-  height: 10px
-  display: inline-block
-  background-color: #ccc
-  left: 5px
-  top: 5px
+.data-dictionary
+  position: relative
+  margin-left: 10%
+  margin-right: 10%
+
+  .dd-noun-select
+    width: 20%
+
+  .color-box
+    width: 10px
+    height: 10px
+    display: inline-block
+    background-color: #ccc
+    left: 5px
+    top: 5px
+
+  .table-databar
+    display: flex
+    align-items: center
+    justify-content: space-between
+    padding-bottom: 7px
+
+  .help-window
+    position: absolute
+    display: flex
+    flex-direction: column
+    height: 80%
+    width: 60%
+    min-width: 320px
+    top: 0
+    left: 0
+    right: 0
+    bottom: 0
+    margin: auto
+    background: #fff
+    box-shadow: 0 5px 15px rgba(0,0,0,0.5)
+    border: 1px solid rgba(0,0,0,0.2)
+    border-radius: 6px
+    overflow: auto
+    outline: none
