--- a/src/css/components/DataDictionary.styl
+++ b/src/css/components/DataDictionary.styl
@@ -3,8 +3,16 @@
   margin-left: 10%
   margin-right: 10%
 
-  .dd-noun-select
-    width: 20%
+  .dataset-select
+    margin: 20px 0
+    display: flex
+    justify-content: space-between
+
+    .nouns
+      width: 20%
+
+    .endpoints
+      width: 78%
 
   .color-box
     width: 10px
@@ -38,3 +46,31 @@
     border-radius: 6px
     overflow: auto
     outline: none
+
+  .usage-header
+    background-color: #fff
+    border: 1px solid hsl(0,0%,80%)
+    border-radius: 4px 4px 0px 0px
+    border-bottom: none
+    padding: 10px 20px
+
+  .graphics
+    display: flex
+    background-color: #fff
+    border: 1px solid hsl(0,0%,80%)
+    border-radius: 4px
+
+    .left
+      display: flex
+      width: 50%;
+      background-color: #fff
+      border-right: 1px solid hsl(0,0%,80%)
+      border-radius: 4px
+      justify-content: space-around;
+      align-items: center;
+      flex-direction: column;
+
+    .right
+      width: 50%
+      display: flex
+      align-items: center
