--- a/src/css/_base.styl
+++ b/src/css/_base.styl
@@ -224,6 +224,18 @@ select,
   padding: 7px
   width: 100%
 
+select {
+  /* for Firefox */
+  -moz-appearance: none;
+  /* for Chrome */
+  -webkit-appearance: none;
+}
+
+/* For IE10 */
+select::-ms-expand {
+  display: none;
+}
+
 // basic responsive img rules
 // 1 no extra space after img
 // 2 keep aspect ratio
