--- a/src/css/components/DataDictionary.styl
+++ b/src/css/components/DataDictionary.styl
@@ -10,6 +10,7 @@
 
     .nouns
       width: 20%
+      line-height: 20px
 
     .endpoints
       width: 78%
@@ -17,40 +18,42 @@
   .color-box
     width: 10px
     height: 10px
+    margin-right: 5px;
     display: inline-block
-    background-color: #ccc
-    left: 5px
-    top: 5px
 
   .table-databar
     display: flex
     align-items: center
     justify-content: space-between
-    padding-bottom: 7px
+    margin-top: 20px
+    padding: 0 20px
+    border: 1px solid hsl(0,0%,80%)
+    border-radius: 4px 4px 0 0
+    border-bottom: none
 
-  .help-window
-    position: absolute
-    display: flex
-    flex-direction: column
-    height: 80%
-    width: 60%
-    min-width: 320px
-    top: 0
-    left: 0
-    right: 0
-    bottom: 0
-    margin: auto
-    background: #fff
-    box-shadow: 0 5px 15px rgba(0,0,0,0.5)
-    border: 1px solid rgba(0,0,0,0.2)
-    border-radius: 6px
-    overflow: auto
-    outline: none
+    > div
+      width: 59%
+      display: inline-flex
+      justify-content: space-between
+      align-items: center
+
+      > a
+        display: inline-flex
+        align-items: center
+
+       > img
+         width: 31px
+         padding: 5px
+
+      > input
+        width: 240px
+        height: 30px
+        text-align: center
 
   .usage-header
     background-color: #fff
     border: 1px solid hsl(0,0%,80%)
-    border-radius: 4px 4px 0px 0px
+    border-radius: 4px 4px 0 0
     border-bottom: none
     padding: 10px 20px
 
@@ -58,7 +61,7 @@
     display: flex
     background-color: #fff
     border: 1px solid hsl(0,0%,80%)
-    border-radius: 4px
+    border-radius: 0 0 4px 4px
 
     .left
       display: flex
@@ -66,11 +69,78 @@
       background-color: #fff
       border-right: 1px solid hsl(0,0%,80%)
       border-radius: 4px
-      justify-content: space-around;
-      align-items: center;
-      flex-direction: column;
+
+      > div
+        display: flex
+        width: 50%
+        justify-content: space-around
+        align-items: center
+        flex-direction: column
+
+        > h4
+          font-size: 16px
+
+        > h5
+          font-size: 45px
+
+        > span
+          font-size: 15px
+          margin-bottom: 20px
 
     .right
       width: 50%
       display: flex
       align-items: center
+
+  .table
+    width: 100%
+    height: 494px
+    position: relative
+    margin-bottom: 20px
+
+.help-window
+  position: absolute
+  display: flex
+  flex-direction: column
+  height: 80%
+  width: 90%
+  min-width: 320px
+  top: 0
+  left: 0
+  right: 0
+  bottom: 0
+  margin: auto
+  background: rgba(255, 255, 255, 1)
+  box-shadow: 0 5px 15px rgba(0,0,0,.5)
+  border: 1px solid rgba(0,0,0,.2)
+  border-radius: 6px
+  overflow: auto
+  outline: none
+
+  > h3
+    padding: 15px
+    border-bottom: 1px solid #e5e5e5
+    text-align: center
+
+    > span
+      font-size: 16px
+      font-weight: normal
+
+  > div
+    margin: 0 15px 0
+
+    > h4
+      padding-top: 10px
+
+    > p
+      padding-top: 10px
+
+    > ul
+      padding-top: 10px
+      list-style: inside
+
+  .ReactTable .-pagination input, .ReactTable .-pagination select
+    padding: 5px 17px
+
+  .ReactTable .rt-th, .ReactTable .rt-td
+    text-align: center
