--- a/src/css/components/DataDictionary.styl
+++ b/src/css/components/DataDictionary.styl
@@ -1,24 +1,33 @@
+.data-dictionary-header
+  border-bottom: 1px solid #ccc
+  padding: 20px 0
+
 .data-dictionary
   position: relative
-  margin-left: 10%
-  margin-right: 10%
 
   .dataset-select
     margin: 20px 0
     display: flex
     justify-content: space-between
 
+    > div
+      display: flex
+      flex-direction: column
+
+      > h5
+        margin-bottom: 12px
+
     .nouns
-      width: 20%
+      width: 17%
       line-height: 20px
 
     .endpoints
-      width: 78%
+      width: 82%
 
   .color-box
     width: 10px
     height: 10px
-    margin-right: 5px;
+    margin-right: 5px
     display: inline-block
 
   .table-databar
@@ -32,7 +41,7 @@
     border-bottom: none
 
     > div
-      width: 59%
+      width: 29%
       display: inline-flex
       justify-content: space-between
       align-items: center
@@ -73,7 +82,7 @@
       > div
         display: flex
         width: 50%
-        justify-content: space-around
+        justify-content: space-evenly
         align-items: center
         flex-direction: column
 
@@ -91,12 +100,16 @@
       width: 50%
       display: flex
       align-items: center
+      padding: 15px 0
 
   .table
     width: 100%
     height: 494px
     position: relative
     margin-bottom: 20px
+
+    .rt-resizable-header-content
+      text-align: left
 
 .help-window
   position: absolute
@@ -120,7 +133,6 @@
   > h3
     padding: 15px
     border-bottom: 1px solid #e5e5e5
-    text-align: center
 
     > span
       font-size: 16px
