Infographic hover hotfix.

--- a/src/css/components/InteractiveInfographic.styl
+++ b/src/css/components/InteractiveInfographic.styl
@@ -192,7 +192,11 @@
 
 .checkbox
   background: #fff
+  display: block
   padding: 8px 10px
+
+  &:hover
+    background-color: #ebf5ff !important
 
 .select-placeholder
   font-weight: bold
