Post-demo updates. No more static data.

--- a/src/css/components/Panels.styl
+++ b/src/css/components/Panels.styl
@@ -8,8 +8,8 @@
   .panel-balance
     width: 40%
 
-  .panel-position
-    margin-bottom: 23px
+.panel-positions
+  margin-bottom: 23px
 
 .panels-top
   margin: 40px 0
