continue to convert styl files

--- a/src/css/_vars.scss
+++ b/src/css/_vars.scss
@@ -123,12 +123,14 @@ $gridWidth: 85%;
 $mobGridWidth: calc(100% - 40px);
 
 // 'all and' for IE
-$bpMob: '(max-width: 640px)';
-$bpMobSmall: '(max-width: 425px)';
-$bpTab: '(min-width: 641px)';
-$bpTabRange: '(min-width: 641px) and (max-width: 1023px)';
-$bpDesk: '(min-width: 1024px)';
-$bpWide: '(min-width: 1400px)';
+$bpMob: '640px'; // '(max-width: $bpMob)'
+$bpMobSmall: '425px'; // '(max-width: $bpMobSmall)';
+$bpTab: '641px'; // '(min-width: $bpTab)';
+// $bpTabRange: '(min-width: $bpTabRange1) and (max-width: $bpTabRange2)';
+$bpTabRange1: '641px';
+$bpTabRange2: '1023px';
+$bpDesk: '1024px'; // '(min-width: $bpDesk)';
+$bpWide: '1400px'; //'(min-width: $bpWide)';
 
 // Mobile & tablet
-$tablet: '1023px';
+$tablet: '1023px'; // (max-width: $tablet)
